правки и доработки по кораблю, подключение storage

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -8,12 +8,14 @@ RUN apt-get update && apt-get install -y \
     libxml2-dev \
     zip \
     unzip \
-    locales
+    locales \
+    libicu-dev
 
-RUN locale-gen ru_RU.UTF-8 && \
-    update-locale LANG=ru_RU.UTF-8
+RUN sed -i '/ru_RU.UTF-8/s/^# //g' /etc/locale.gen \
+    && locale-gen ru_RU.UTF-8 \
+    && localedef -i ru_RU -f UTF-8 ru_RU.UTF-8
 
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
+RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd intl
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
@@ -23,3 +25,4 @@ RUN chown -R www-data:www-data /var/www
 
 ENV LANG=ru_RU.UTF-8
 ENV LC_ALL=ru_RU.UTF-8
+ENV LANGUAGE=ru_RU.UTF-8
