--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,9 @@ DB_DATABASE=cruise_db
 DB_USERNAME=cruise_user
 DB_PASSWORD=secret
 
+DB_CHARSET=utf8mb4
+DB_COLLATION=utf8mb4_unicode_ci
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
