--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,16 +33,20 @@ services:
     container_name: cruise_mysql
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: cruise_db
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_PASSWORD: secret
-      MYSQL_USER: cruise_user
+        MYSQL_DATABASE: cruise_db
+        MYSQL_ROOT_PASSWORD: root
+        MYSQL_PASSWORD: secret
+        MYSQL_USER: cruise_user
+        MYSQL_CHARSET: utf8mb4
+        MYSQL_COLLATION: utf8mb4_unicode_ci
+    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
     ports:
-      - "3307:3306"
+        - "3307:3306"
     volumes:
-      - cruise_mysql_data:/var/lib/mysql
+        - cruise_mysql_data:/var/lib/mysql
+        - ./mysql/conf.d:/etc/mysql/conf.d
     networks:
-      - cruise_network
+        - cruise_network
 
   node:
     build:
